--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    <meta charset="UTF-8">
+    <title>survey questions</title>  
+    <link type="text/css">
+</head>
 <body>
 
 <h2>STOCK TICKER APP</h2>
